--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ ul {
     width: 400px;
     position: relative; 
 }
-
 .box:hover .list {
     transform: translateX(-13%);
 }
@@ -30,12 +29,14 @@ ul {
 }
 .menu-text{
     display: flex;
-    justify-content: center;
     align-items: center;
-    font-size: 50px;
+    writing-mode: vertical-rl;
+    padding-top: 300px;
+    font-size: 40px;
+    color: whitesmoke;
     width: 50px;
-    height: 1000px;
-    background-color: red;
+    height: 950px;
+    background-color: gray;
 }
 
 .list{
@@ -44,24 +45,38 @@ ul {
     left: 0;
     right: 0;
     bottom: 111px;
-    margin: auto;
+    /* margin: auto; */
     width: 80%;
     height: 1005px;
-    background-color: aqua;
+    background-color: gray;
 
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    flex-direction: column;
     transform: translateX(-200%);
     transition: transform 250ms ease;
 }
-.item>a {
-    font-size: 20px;
-    color: black;
+
+a::before{
+content: "\1F538";
+font-size: 30px;
 }
+.item>a {
+    display: flex;
+    text-align: center;
+    font-size: 39px;
+    color: black;
+    width: 10px;
+    margin-right: 90px;
+}
+
 .container{
     position: relative;
     left: 200px;
+}
+a:hover{
+    color: orange;
 }
 .box1{
     display: flex;
