--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
+@import "utils/variables";
 @import "base/reset";
 
 @import "layout/header";
@@ -7,4 +8,3 @@
 @import "layout/clients";
 @import "layout/feature";
 @import "layout/footer";
-@import "utils/variables"
