--- a/css/main.css
+++ b/css/main.css
@@ -33,10 +33,8 @@ ul {
 }
 
 body {
-  color: #757575;
   font-family: Roboto;
   letter-spacing: 0, 3em;
-  background-color: #fff;
 }
 
 .container {
@@ -120,12 +118,12 @@ body {
   line-height: 31px;
   letter-spacing: 0.03em;
   margin-right: 25px;
-  color: #000;
+  color: #212121;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1200px) {
   .web {
-    color: #000;
+    color: #212121;
   }
 }
 .menu {
@@ -195,19 +193,7 @@ body {
     letter-spacing: 0.02em;
   }
   .menu-nav-link:hover {
-    color: #2196F3;
-  }
-  .header-contact {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-  .email_header {
-    padding-right: 30px;
+    color: #2196f3;
   }
   .header-contact {
     display: -webkit-box;
@@ -217,6 +203,9 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .email_header {
+    padding-right: 30px;
   }
   .header-icon {
     fill: #757575;
@@ -229,18 +218,29 @@ body {
     letter-spacing: 0.02em;
   }
   .header-contact-list:hover {
-    color: #2196F3;
+    color: #2196f3;
   }
   .header-contact-list:hover .header-icon {
     fill: #188CE8;
   }
 }
+@media screen and (min-width: 1200px) {
+  .header-contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
 .hero {
-  background-image: url("../img/background.jpg");
+  background-image: url(../img/background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 400px;
+  height: 600px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -254,7 +254,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 118px, 0;
+  padding: 118px, 0px;
 }
 .hero-title {
   font-weight: 900;
@@ -263,7 +263,7 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #fff;
   margin-bottom: 30px;
 }
 .hero-button {
@@ -271,8 +271,8 @@ body {
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.06em;
-  color: #FFFFFF;
-  background-color: #2196F3;
+  color: #fff;
+  background-color: #2196f3;
   border-radius: 4px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -292,20 +292,14 @@ body {
 
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../img/background768.jpg");
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/background768.jpg");
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/background768.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/background768.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../img/background1200.jpg");
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/background1200.jpg");
-    height: 600px;
-    background-image: url("../img/background1200.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 400px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/background1200.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/background1200.jpg);
   }
 }
 .work {
@@ -347,7 +341,7 @@ body {
   }
 }
 .section3 {
-  background-color: #F5F4FA;
+  background-color: #fff;
 }
 
 .team {
@@ -368,7 +362,7 @@ body {
   margin-bottom: 30px;
 }
 .team-item {
-  background: #FFFFFF;
+  background: #fff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -456,7 +450,7 @@ body {
   fill: #AFB1B8;
 }
 .clients-item:hover .clients-icon {
-  fill: #2196F3;
+  fill: #2196f3;
 }
 .clients-item:hover {
   border: 1px solid #2196f3;
@@ -490,6 +484,11 @@ body {
           align-items: center;
 }
 
+.robota {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .feature-title {
   font-weight: 700;
   font-size: 14px;
@@ -518,13 +517,6 @@ body {
         flex-wrap: wrap;
     margin: 0;
     margin: -7.5px;
-  }
-  .hero {
-    background-image: url(img/.cool.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 400px;
   }
   .feature-item {
     width: calc((100% - 60px) / 2);
@@ -598,7 +590,7 @@ footer {
 }
 
 .studio_footer {
-  color: white;
+  color: #fff;
   margin-left: 215px;
   margin-top: 60px;
   font-family: "Raleway";
@@ -609,5 +601,5 @@ footer {
 }
 
 .place {
-  color: #FFFFFF;
+  color: #fff;
 }/*# sourceMappingURL=main.css.map */
