--- a/sass/layout/_feature.scss
+++ b/sass/layout/_feature.scss
@@ -7,7 +7,10 @@
   justify-content: center;
   align-items: center;
  } 
-
+.robota{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 .feature-title {
   font-weight: 700;
   font-size: 14px;
